# qr-live

./: .editorconfig  Cargo.toml  flake.nix  languages.yaml  missing_pkgs.txt  tools.txt
reference/: QR.chef.pl  QR.exe.mdb  QR.fl.c  QR.n  QR.ook.bf  QR.ratfor.f  QR.ts.js  QR.wat.wasm  QR.yab  qr.ali
scripts/: run-single.sh
src/: languages.rs  lib.rs
tests/: test_language_spec.rs
