[package]
name = "qr-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettydiff = "0.6.4"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
serde_yaml = "0.9.32"
sha1 = "0.10.6"
tempfile = "3.10.1"
